projects/test/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/java/javafx-base-11.jar:/usr/share/java/javafx-controls-11.jar:/usr/share/java/javafx-fxml-11.jar:/usr/share/java/javafx-graphics-11.jar:/usr/share/java/javafx-media-11.jar:/usr/share/java/javafx-properties-11.jar:/usr/share/java/javafx-swing-11.jar:/usr/share/java/javafx-web-11.jar:/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/test
-d
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/test/doc
-encoding
UTF-8
-charset
UTF-8
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/test/Shape.java
<---- end of javadoc command ---->
Loading source file /home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/test/Shape.java...
Constructing Javadoc information...
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/test/Shape.java:2: error: cannot find symbol
public class Shape implements Comparabke {
                              ^
  symbol: class Comparabke
1 error
